# rust-todos-api

./: .env  Cargo.toml  README.MD  diesel.toml
migrations/2025-07-11-095631_create_todos/: up.sql
src/: app_state.rs  lib.rs  main.rs  routes.rs  schema.rs
src/features/todos/: mod.rs  routes.rs
src/features/todos/data/: todo_repository.rs
src/features/todos/domain/: todo.rs
src/features/todos/dtos/: mod.rs  todo_dto.rs  upsert_todo_request.rs
src/features/todos/handlers/: create_todo.rs  delete_todo.rs  get_todo.rs  get_todos_list.rs  mod.rs  update_todo.rs
